--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "conversoes-ramon-3b-rm": "^1.0.1",
     "express": "^5.1.0",
     "nodemon": "^3.1.9"
   }
