--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Aula 31/03",
   "main": "script.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon script.js"
@@ -10,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "conversoes-ramon-3b-rm": "^1.0.1",
+    "conversoes-ramon-3b-rm": "^1.2.5",
     "express": "^5.1.0",
     "nodemon": "^3.1.9"
   }
